Fixed screenshot alignment & button size for mobile landscape views.

--- a/css/grid.css
+++ b/css/grid.css
@@ -7,15 +7,6 @@
       "";
 }
 
-.project-grid {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-areas:
-      ""
-      ""
-      "";
-}
-
 .section-grid {
   display: grid;
   grid-template-columns: 1fr;
@@ -30,7 +21,7 @@
   grid-area: title;
 }
 
-.tgp-image {
+.screenshot {
   grid-area: screenshot;
 }
 
@@ -42,20 +33,12 @@
   grid-area: tech-stack;
 }
 
-.whiskey-image {
-  grid-area: screenshot;
-}
-
 .summary-whiskey {
   grid-area: summary;
 }
 
 .stack-whiskey {
   grid-area: tech-stack;
-}
-
-.nfl-image {
-  grid-area: screenshot;
 }
 
 .summary-player {
@@ -66,16 +49,20 @@
   grid-area: tech-stack;
 }
 
-/*@media only screen and (min-width: 640px) and (orientation: landscape) {
-  .section-grid {
+@media only screen and (min-width: 640px) and (orientation: landscape) {
+  /*.section-grid {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-areas:
       "screenshot"
       "summary"
       "tech-stack";
+  }*/
+
+  .screenshot {
+    align-self: center;
   }
-}*/
+}
 
 @media screen and (min-width: 640px) {
   .section-grid {
